[tool.poetry]
name = "midterm-exam-2"
version = "0.1.0"
description = ""
authors = ["hyungkyung Lee <ellie@timepercentcorp.com>"]
readme = "README.md"
packages = [{include = "midterm_exam_2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
